# MultiLingual-VoiceBot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  VoiceBot_Technical_Writeup.docx  app.py  decision.md  docker-compose.yml  llm.py  main.py  pyproject.toml  stt.py  translate.py
TTS/: pipeline.py
VectorStore/: pipeline.py
